fix(menu) : menu mobile categories btn isnt visible on production -- fixed !

--- a/react/components/Mobile/MegaMenuMobile/styles.css
+++ b/react/components/Mobile/MegaMenuMobile/styles.css
@@ -26,8 +26,10 @@ a {cursor: pointer}
         background-color: transparent;
     }
 
-    .container_menu_mobile .btn_toggle_menu::before,
-    .btn_toggle_menu::before{
+    .btn_toggle_menu::before {
+        content: "";
+        background-repeat: no-repeat;
+        background-position: center;
         background-image: url(https://coomeva.vtexassets.com/assets/vtex.file-manager-graphql/images/7c52b713-7cd2-4cab-9735-7fa7b455db08___ab3091a8f8323444a8da54ddc7624429.svg);
         margin: 0px;
         width: 40px;
